[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/ALittleNameCalle.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://audio/voice/marwing/en/MW1-0_LR1.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sfx/coin.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
process_priority = -1
layer = 9
script = ExtResource( 2 )

[node name="PauseMenu" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -284, -74 )
color = Color( 0.196078, 0.196078, 0.196078, 0.501961 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="RichTextLabel" parent="PauseMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -0.272034
margin_top = -0.20002
margin_right = -73.728
margin_bottom = -63.6
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "
[wave amp=50 freq=2]PAUSED[/wave]
"
text = "
PAUSED
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="PauseMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_right = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" type="RichTextLabel" parent="PauseMenu/MainMenu"]
anchor_left = 0.355
anchor_top = 0.405
anchor_right = 0.648
anchor_bottom = 0.618
margin_left = 13.4799
margin_top = -12.0
margin_right = -140.552
margin_bottom = -85.8
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
BACK TO GAME
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GFXLabel" type="RichTextLabel" parent="PauseMenu/MainMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -122.12
margin_top = 184.32
margin_right = -63.576
margin_bottom = 175.84
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
GRAPHICS SETTINGS
"

[node name="SFXLabel" type="RichTextLabel" parent="PauseMenu/MainMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -86.12
margin_top = 253.32
margin_right = -63.576
margin_bottom = 244.84
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
AUDIO SETTINGS
"

[node name="RestartLabel" type="RichTextLabel" parent="PauseMenu/MainMenu"]
anchor_left = 0.355
anchor_top = 0.405
anchor_right = 0.648
anchor_bottom = 0.618
margin_left = 64.48
margin_top = 193.0
margin_right = -151.552
margin_bottom = 119.2
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="RichTextLabel" parent="PauseMenu/MainMenu"]
anchor_left = 0.355
anchor_top = 0.405
anchor_right = 0.648
anchor_bottom = 0.618
margin_left = -5.51999
margin_top = 257.0
margin_right = -149.552
margin_bottom = 183.2
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
BACK TO TITLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GFXMenu" type="Control" parent="PauseMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_right = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" type="RichTextLabel" parent="PauseMenu/GFXMenu"]
anchor_left = 0.355
anchor_top = 0.405
anchor_right = 0.648
anchor_bottom = 0.618
margin_left = 13.4799
margin_top = -12.0
margin_right = -140.552
margin_bottom = -85.8
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
BACK TO MAIN
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamLeanLabel" type="RichTextLabel" parent="PauseMenu/GFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -186.272
margin_top = 184.8
margin_right = -67.728
margin_bottom = 176.6
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
CAMERA LEAN: <  OFF  >
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShakeLabel" type="RichTextLabel" parent="PauseMenu/GFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -118.272
margin_top = 254.8
margin_right = -61.728
margin_bottom = 246.32
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
SCREEN SHAKE: ON
"

[node name="CRTLabel" type="RichTextLabel" parent="PauseMenu/GFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -93.272
margin_top = 324.8
margin_right = -56.728
margin_bottom = 316.32
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
CRT FILTER: OFF
"

[node name="SFXMenu" type="Control" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_right = -5.0

[node name="BackLabel" type="RichTextLabel" parent="PauseMenu/SFXMenu"]
anchor_left = 0.355
anchor_top = 0.405
anchor_right = 0.648
anchor_bottom = 0.618
margin_left = 13.4799
margin_top = -12.0
margin_right = -140.552
margin_bottom = -85.8
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
BACK TO MAIN
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameVolLabel" type="RichTextLabel" parent="PauseMenu/SFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -176.272
margin_top = 184.8
margin_right = -67.728
margin_bottom = 176.6
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
GAME VOLUME: <  10  >
"

[node name="MusicVolLabel" type="RichTextLabel" parent="PauseMenu/SFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -186.272
margin_top = 254.8
margin_right = -67.728
margin_bottom = 246.32
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
MUSIC VOLUME: <  10  >
"

[node name="SFXVolLabel" type="RichTextLabel" parent="PauseMenu/SFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -160.272
margin_top = 320.8
margin_right = -67.728
margin_bottom = 312.6
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
SFX VOLUME: <  10  >
"

[node name="VoiceVolLabel" type="RichTextLabel" parent="PauseMenu/SFXMenu"]
anchor_left = 0.428
anchor_top = 0.192
anchor_right = 0.572
anchor_bottom = 0.404
margin_left = -186.272
margin_top = 384.8
margin_right = -67.728
margin_bottom = 376.32
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "
VOICE VOLUME: <  10  >
"

[node name="SFX Player" type="AudioStreamPlayer" parent="PauseMenu/SFXMenu"]
stream = ExtResource( 4 )
bus = "sfx"

[node name="Voice Player" type="AudioStreamPlayer" parent="PauseMenu/SFXMenu"]
stream = ExtResource( 3 )
bus = "voice"
